# yihua-lab

./: .deploy.env.example  .gitignore  README.md  deploy-all.sh  ecosystem.config.js
backend/: .env.example  app.py  auth.py  config.py  deploy-local.sh  deploy.sh  pyproject.toml  supabase_schema.sql
backend/api/: articles.py  auth.py  categories.py  images.py  nav_visibility.py  posts.py  projects.py
backend/crud/: articles.py  categories.py  nav_visibility.py  posts.py  projects.py  users.py
backend/service/: github_image.py
frontend/: deploy-local.sh  i18n-config.js  middleware.js  package-lock.json  package.json
frontend/app/: globals.css  layout.js
frontend/app/[lang]/: layout.js  page.js
frontend/app/[lang]/about/: page.js
frontend/app/[lang]/archives/: page.js
frontend/app/[lang]/category/: page.js
frontend/app/[lang]/posts/: page.js
frontend/app/[slug]/: page.js
frontend/app/admin/: layout.js  page.js
frontend/app/archives/: page.js
frontend/app/category/: page.js
frontend/app/login/: page.js
frontend/app/tag/: page.js
frontend/components/: ArchiveList.js  CategoryCard.js  CodeHighlight.js  Footer.js  Header.js  LangSwitch.js  NavVisibilityPanel.js  PostNav.js  Profile.js  ProjectList.js  ReadingProgress.js  TableOfContents.js  TagCloud.js  ThemeProvider.js  ThemeToggle.js
frontend/content/pages/: about.en.md  about.md  about.zh.md
frontend/content/posts/: hello-world.md  markdown-test.md
frontend/dictionaries/: en.json  zh.json
frontend/lib/: auth.js  config.js  dictionaries.js  pages.js  posts.js  projects.js
(+12 files in other folders)
